  getAnnotatedGetters(), getAnnotatedSetters().
- Changed: toString() methods on some data structures.
- Added: Common.openResource().
- Added/Fixed: Reflect.createForType() now recognizes superclasses of input
  objects and will not convert them (it will cast them).
- Changed: Reflect.createForType() can convert single-character-strings to 
  characters.

Changed in 2.19.0
=================

- Changed: Reflect.createForType(...) will not convert same types to other 
  types.
- Added: Common.urlUnescape(String) for un-escaping a URL-encoded string.
- Added: Reflect.getClasses(String) for package and classpath scanning.
- Added: Reflect.getClasses(String, ClassLoader) for package and classpath 
  scanning.
- Added: AbstractMap<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Added: AbstractSet<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Changed: A method or two has been made public in order to accommodate for
  the previous changes.
- Changed: LoggerThread behavior: not daemon anymore - log flushes all pending
  log messages then waits 100ms before it dies. More log messages restart the
  thread. This ensures that all messages get logged, always.
  
Changed in 2.18.0
=================

- Added: com.blackrook.commons.logger package for logging.

Changed in 2.17.0
=================

- Requires: Java 7 or higher.
- Added: Common.parse*Array(...) methods for parsing arrays of primitives from
  strings.
- Added: Common.printBuffer(...) debug methods for printing the contents of 
  buffers, both direct and in-Java.
- Added: com.blackrook.commons.Singleton for managing and creating singleton
  instances of classes.
- Added: com.blackrook.commons.CommonTokenizer for tokenizing an average line of text.
- Added: com.blackrook.commons.Counter: a thread-safe counter object.

Changed in 2.16.0
=================
